<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/startFragment">

    <fragment
        android:id="@+id/startFragment"
        android:name="com.example.pizza.StartFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_start" >
        <action
            android:id="@+id/action_startFragment_to_recipeFragment"
            app:destination="@id/recipeFragment" />
    </fragment>
    <fragment
        android:id="@+id/recipeFragment"
        android:name="com.example.pizza.RecipeFragment"
        android:label="@string/choose_recipe"
        tools:layout="@layout/fragment_recipe" >
        <action
            android:id="@+id/action_recipeFragment_to_deliveryFragment"
            app:destination="@id/deliveryFragment" />
        <action
            android:id="@+id/action_recipeFragment_to_startFragment"
            app:destination="@+id/startFragment"
            app:popUpTo="@id/startFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/deliveryFragment"
        android:name="com.example.pizza.DeliveryFragment"
        android:label="@string/choose_delivery_date"
        tools:layout="@layout/fragment_delivery" >
        <action
            android:id="@+id/action_deliveryFragment_to_summaryFragment"
            app:destination="@id/summaryFragment" />
        <action
            android:id="@+id/action_deliveryFragment_to_startFragment"
            app:destination="@+id/startFragment"
            app:popUpTo="@id/startFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/summaryFragment"
        android:name="com.example.pizza.SummaryFragment"
        android:label="@string/order_summary"
        tools:layout="@layout/fragment_summary" />
    <action
        android:id="@+id/action_summaryFragment_to_startFragment"
        app:destination="@+id/startFragment"
        app:popUpTo="@id/startFragment"
        app:popUpToInclusive="true" />
</navigation>