<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".StartFragment">

    <data>
        <variable
            name="startFragment"
            type="com.example.pizza.StartFragment" />
    </data>

    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/side_margin">


    <ImageView
        android:layout_width="@dimen/image_size"
        android:layout_height="@dimen/image_size"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_between_elements"
        android:importantForAccessibility="no"
        android:scaleType="center"
        app:srcCompat="@drawable/pizza" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/order_pizza"
        android:textAppearance="?attr/textAppearanceHeadline4"
        android:textColor="@color/material_on_background_emphasis_medium" />


    <Button
        android:id="@+id/order_small_pizza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="@{() -> startFragment.orderPizza(6)}"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_between_elements"
        android:minWidth="@dimen/order_pizza_button_width"
        android:text="SMALL PIZZAS" />

    <Button
        android:id="@+id/order_medium_pizza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="@{() -> startFragment.orderPizza(8)}"
        android:layout_marginTop="@dimen/margin_between_elements"
        android:minWidth="@dimen/order_pizza_button_width"
        android:text="@string/medium_pizzas"/>

    <Button
        android:id="@+id/order_large_pizza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="@{() -> startFragment.orderPizza(10)}"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_between_elements"
        android:minWidth="@dimen/order_pizza_button_width"
        android:text="@string/large_pizzas"/>



        </LinearLayout>
    </ScrollView>
</layout>

